--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "build": "tsc"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/mime-types": "^2.1.1",
+    "@types/minio": "^7.0.11",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^16.10.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -23,5 +27,11 @@
     "ts-node": "^10.3.0",
     "typescript": "^4.4.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "express": "^4.17.2",
+    "mime-types": "^2.1.34",
+    "minio": "^7.0.25",
+    "morgan": "^1.10.0"
+  }
 }
