--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "tsc"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/mime-types": "^2.1.1",
     "@types/minio": "^7.0.11",
@@ -28,6 +29,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "mime-types": "^2.1.34",
